--- a/Ejercicios/ej07/ej07.html
+++ b/Ejercicios/ej07/ej07.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
     </head>
     <body>
         <h1>Formulario de registro</h1>
